Adding some style

--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 <!DOCTYPE html>
 <html>
-Hello World!
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Kris Jurgowski</title>
+    <link rel="stylesheet" type="text/css" href="app.css">
+</head>
+<body>
+    <div>
+        <div class="first">
+            <h3>Kris Jurgowski</h3>
+        </div>
+        <div class="second">
+
+        </div>
+        <div class="third">
+
+        </div>
+    </div>
+
+</body>
+
+<script>
+
+</script>
+
 </html>
