--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <title>Kris Jurgowski</title>
     <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="animate.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+    <script>
+
+    </script>
 </head>
 <body>
     <div>
         <div class="first">
-            <h3>Kris Jurgowski</h3>
+            <h3 class="animated fadeInUp">Kris Jurgowski</h3>
         </div>
         <div class="second">
 
