adding some picks and animations

--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
+    <script>
+        $(function(){
+            $('h3').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
+
+                $('.codin').addClass('animated fadeInUp')
+            });
+        })
+
+    </script>
 </head>
 <body>
     <div>
         <div class="first">
             <h3 class="animated fadeInUp">Kris Jurgowski</h3>
+            <img class="codin" src="coding.jpg">
         </div>
         <div class="second">
 
