change html tag

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script>
         $(function(){
-            $('h3').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
+            $('.name').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
 
                 $('.codin').addClass('animated fadeInUp')
             });
@@ -22,7 +22,7 @@
 <body>
     <div>
         <div class="first">
-            <h3 class="animated fadeInUp">Kris Jurgowski</h3>
+            <div class="name animated fadeInUp">Kris Jurgowski</div>
             <img class="codin" src="coding.jpg">
         </div>
         <div class="second">
