--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             $('.name').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
 
-                $('.codin').addClass('animated fadeInUp')
+                $('.profilePic').addClass('animated fadeInUp')
             });
         })
 
@@ -24,7 +24,7 @@
 <body>
     <section class="first">
         <div class="name animated fadeInUp">Kris Jurgowski</div>
-        <img class="codin" src="assets/coding.jpg">
+        <img class="profilePic" src="assets/jurgowski.jpg">
     </section>
 
     <section class="second">
