--- a/index.html
+++ b/index.html
@@ -20,26 +20,20 @@
     </script>
 </head>
 <body>
-    <section class="first">
-        <img class="profilePic animated fadeInUp" src="assets/jurgowski.jpg">
-        <div class="bio">
-            <div class="name">Kris Jurgowski</div>
-            <div class="description">iOS Developer</div>
+    <img class="profilePic animated fadeInUp" src="assets/jurgowski.jpg">
+    <div class="bio">
+        <div class="name">Kris Jurgowski</div>
+        <div class="description">iOS Developer. Enjoys minimalism.</div>
+        <div class="links">
+            <a class="profileLink" href="http://fb.com/kris.jurgowski"><img src="assets/fblogo.png"></a>
+            <div class="hdivider"></div>
+            <a class="profileLink" href="http://fb.com/kris.jurgowski"><img src="assets/linkedinlogo.png"></a>
         </div>
-    </section>
-
-    <section class="second">
-
-    </section>
-
-    <section class="third">
-
-    </section>
+    </div>
 
 </body>
 
 <script>
-
 </script>
 
 </html>
