--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no, minimum-scale=1.0, maximum-scale=1.0'">
     <title>Kris Jurgowski</title>
     <link rel="stylesheet" type="text/css" href="styles/app.css">
     <link rel="stylesheet" type="text/css" href="styles/animate.css">
@@ -20,7 +20,9 @@
     </script>
 </head>
 <body>
-    <img class="profilePic animated fadeInUp" src="assets/jurgowski.jpg">
+    <div class="profileContainer">
+        <img class="profilePic animated fadeInUp" src="assets/jurgowski.jpg">
+    </div>
     <div class="bio">
         <div class="name">Kris Jurgowski</div>
         <div class="description">iOS Developer. Enjoys minimalism.</div>
