--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <a class="profileLink" href="http://fb.com/kris.jurgowski"><img src="assets/linkedinlogo.png"></a>
         </div>
     </div>
+    <div class="porfolio">
+        
+    </div>
 
 </body>
 
