--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             $('.profilePic').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
                 $('.bio').addClass('animated fadeInUp')
             });
+            
         })
 
     </script>
@@ -29,11 +30,18 @@
         <div class="links">
             <a class="profileLink" href="http://fb.com/kris.jurgowski"><img src="assets/fblogo.png"></a>
             <div class="hdivider"></div>
-            <a class="profileLink" href="http://fb.com/kris.jurgowski"><img src="assets/linkedinlogo.png"></a>
+            <a class="profileLink" href="https://www.linkedin.com/profile/view?id=41392278"><img src="assets/linkedinlogo.png"></a>
         </div>
     </div>
-    <div class="porfolio">
-        
+    <div class="portfolio">
+        <div class="description">Portfolio</div>
+        <div class="links">
+            <a class="appLink" href="https://itunes.apple.com/us/app/tally-anything/id868935366"><img class="appImage" src="assets/tally.jpeg"></a>
+            <div class="hdivider"></div>
+            <a class="appLink" href="https://itunes.apple.com/us/app/draw-something-free/id488628250"><img class="appImage" src="assets/ds.jpeg"></a>
+            <div class="hdivider"></div>
+            <a class="appLink" href="https://itunes.apple.com/us/app/art-with-friends-free/id602873438"><img class="appImage" src="assets/awf.jpeg"></a>
+        </div>
     </div>
 
 </body>
