--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             $('.profilePic').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
                 $('.bio').addClass('animated fadeInUp')
             });
-            
+            $('.bio').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
+                $('.portfolio').addClass('animated fadeInUp')
+            });
         })
 
     </script>
