wait for assets to load before animation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script>
+        $(window).load(function()
+        {
+            $('.profilePic').addClass('animated fadeInUp')
+        })
         $(function(){
             $('.profilePic').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
                 $('.bio').addClass('animated fadeInUp')
@@ -22,7 +26,7 @@
 </head>
 <body>
     <div class="profileContainer">
-        <img class="profilePic animated fadeInUp" src="assets/jurgowski.jpg">
+        <img class="profilePic" src="assets/jurgowski.jpg">
     </div>
     <div class="bio">
         <div class="name">Kris Jurgowski</div>
