Copy change- per recommendations

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             <a class="profileLink" href="https://www.linkedin.com/profile/view?id=41392278"><img src="assets/linkedinlogo.png"></a>
         </div>
     </div>
-    <div class="portfolio">
-        <div class="description">Portfolio</div>
+    <div class="portfolio">Experience</div>
         <div class="links">
             <a class="appLink" href="https://itunes.apple.com/us/app/tally-anything/id868935366"><img class="appImage" src="assets/tally.jpeg"></a>
             <div class="hdivider"></div>
