--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
     </div>
     <div class="bio">
         <div class="name">Kris Jurgowski</div>
-        <div class="description">iOS Developer. Enjoys minimalism.</div>
+        <div class="description">iOS Developer</div>
         <div class="links">
-            <a class="profileLink" href="http://fb.com/kris.jurgowski"><img src="assets/fblogo.png"></a>
-            <div class="hdivider"></div>
             <a class="profileLink" href="https://www.linkedin.com/profile/view?id=41392278"><img src="assets/linkedinlogo.png"></a>
         </div>
     </div>
