--- a/index.html
+++ b/index.html
@@ -8,21 +8,8 @@
     <link rel="stylesheet" type="text/css" href="styles/animate.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script>
-        $(window).load(function()
-        {
-            $('.profilePic').addClass('animated fadeInUp')
-        })
-        $(function(){
-            $('.profilePic').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
-                $('.bio').addClass('animated fadeInUp')
-            });
-            $('.bio').one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function(){
-                $('.portfolio').addClass('animated fadeInUp')
-            });
-        })
-
-    </script>
+	<script src="js/fades.js" /></script>
+   
 </head>
 <body>
     <div class="profileContainer">
@@ -47,8 +34,5 @@
     </div>
 
 </body>
-
-<script>
-</script>
 
 </html>
