--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="profilePic" src="assets/jurgowski.jpg">
     </div>
     <div class="bio">
-        <div class="name">Kris Jurgowski</div>
+        <div class="name">Krys Jurgowski</div>
         <div class="description">iOS Developer</div>
         <div class="links">
             <a class="profileLink" href="https://www.linkedin.com/profile/view?id=41392278"><img src="assets/linkedinlogo.png"></a>
