--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="name">Krys Jurgowski</div>
         <div class="description">iOS Developer</div>
         <div class="links">
-            <a class="profileLink" href="https://www.linkedin.com/profile/view?id=41392278"><img src="assets/linkedinlogo.png"></a>
+            <a class="profileLink" href="https://www.linkedin.com/in/krys-jurgowski-a46a4111/"><img src="assets/linkedinlogo.png"></a>
         </div>
     </div>
     <div class="portfolio">
