--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="profileContainer">
-        <img class="profilePic" src="assets/jurgowski.jpg">
+        <img class="profilePic" src="assets/jurgowski2.jpg">
     </div>
     <div class="bio">
         <div class="name">Krys Jurgowski</div>
