--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     <div class="portfolio">
         <div class="description">Experience</div>
         <div class="links">
+            <a class="appLink" href="https://messenger.com"><img class="appIcon" src="assets/messenger.png"></a>
+            <div class="hdivider"></div>
+            <a class="appLink" href="https://instagram.com"><img class="appIcon" src="assets/igicon.png"></a>
+            <div class="hdivider"></div>
+            <a class="appLink" href="https://facebook.com"><img class="appImage" src="assets/fblogo.png"></a>
+        </div>
+    </div>
+    <div class="past">
+        <div class="description">Past</div>
+        <div class="links">
             <a class="appLink" href="https://itunes.apple.com/us/app/tally-anything/id868935366"><img class="appImage" src="assets/tally.jpeg"></a>
             <div class="hdivider"></div>
             <a class="appLink" href="https://itunes.apple.com/us/app/draw-something-free/id488628250"><img class="appImage" src="assets/ds.jpeg"></a>
