--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+---
+title: Krys Jurgowski
+---
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no, minimum-scale=1.0, maximum-scale=1.0'">
-    <title>Kris Jurgowski</title>
+    <title>{{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="styles/app.css">
     <link rel="stylesheet" type="text/css" href="styles/animate.css">
 
@@ -16,7 +19,7 @@
         <img class="profilePic" src="assets/jurgowski2.jpg">
     </div>
     <div class="bio">
-        <div class="name">Krys Jurgowski</div>
+        <div class="name">{{ page.title }}</div>
         <div class="description">iOS Developer</div>
         <div class="links">
             <a class="profileLink" href="https://www.linkedin.com/in/krys-jurgowski-a46a4111/"><img src="assets/linkedinlogo.png"></a>
