move assets around

--- a/index.html
+++ b/index.html
@@ -11,38 +11,38 @@ title: Krys Jurgowski
     <link rel="stylesheet" type="text/css" href="styles/animate.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="js/fades.js"></script>
+	<script src="assets/js/fades.js"></script>
    
 </head>
 <body>
     <div class="profileContainer">
-        <img class="profilePic" src="assets/jurgowski2.jpg">
+        <img class="profilePic" src="assets/images/jurgowski2.jpg">
     </div>
     <div class="bio">
         <div class="name">{{ page.title }}</div>
         <div class="description">iOS Developer</div>
         <div class="links">
-            <a class="profileLink" href="https://www.linkedin.com/in/krys-jurgowski-a46a4111/"><img src="assets/linkedinlogo.png"></a>
+            <a class="profileLink" href="https://www.linkedin.com/in/krys-jurgowski-a46a4111/"><img src="assets/images/linkedinlogo.png"></a>
         </div>
     </div>
     <div class="portfolio">
         <div class="description">Experience</div>
         <div class="links">
-            <a class="appLink" href="https://messenger.com"><img class="appIcon" src="assets/messenger.png"></a>
+            <a class="appLink" href="https://messenger.com"><img class="appIcon" src="assets/images/messenger.png"></a>
             <div class="hdivider"></div>
-            <a class="appLink" href="https://instagram.com"><img class="appIcon" src="assets/igicon.png"></a>
+            <a class="appLink" href="https://instagram.com"><img class="appIcon" src="assets/images/igicon.png"></a>
             <div class="hdivider"></div>
-            <a class="appLink" href="https://facebook.com"><img class="appImage" src="assets/fblogo.png"></a>
+            <a class="appLink" href="https://facebook.com"><img class="appImage" src="assets/images/fblogo.png"></a>
         </div>
     </div>
     <div class="past">
         <div class="description">Past</div>
         <div class="links">
-            <a class="appLink" href="https://itunes.apple.com/us/app/tally-anything/id868935366"><img class="appImage" src="assets/tally.jpeg"></a>
+            <a class="appLink" href="https://itunes.apple.com/us/app/tally-anything/id868935366"><img class="appImage" src="assets/images/tally.jpeg"></a>
             <div class="hdivider"></div>
-            <a class="appLink" href="https://itunes.apple.com/us/app/draw-something-free/id488628250"><img class="appImage" src="assets/ds.jpeg"></a>
+            <a class="appLink" href="https://itunes.apple.com/us/app/draw-something-free/id488628250"><img class="appImage" src="assets/images/ds.jpeg"></a>
             <div class="hdivider"></div>
-            <a class="appLink" href="https://itunes.apple.com/us/app/art-with-friends-free/id602873438"><img class="appImage" src="assets/awf.jpeg"></a>
+            <a class="appLink" href="https://itunes.apple.com/us/app/art-with-friends-free/id602873438"><img class="appImage" src="assets/images/awf.jpeg"></a>
         </div>
     </div>
 
