--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ title: Krys Jurgowski
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no, minimum-scale=1.0, maximum-scale=1.0'">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="styles/app.css">
-    <link rel="stylesheet" type="text/css" href="styles/animate.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/app.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="assets/js/fades.js"></script>
