--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Krys Jurgowski
     <title>{{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="assets/css/app.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+	<link rel="stylesheet" href="/assets/css/styles.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="assets/js/fades.js"></script>
