--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@ title: Krys Jurgowski
     </div>
     <div class="past">
         <div class="description">Past</div>
-        <div class="links">
-            <a class="appLink" href="https://itunes.apple.com/us/app/tally-anything/id868935366"><img class="appImage" src="assets/images/tally.jpeg"></a>
-            <div class="hdivider"></div>
-            <a class="appLink" href="https://itunes.apple.com/us/app/draw-something-free/id488628250"><img class="appImage" src="assets/images/ds.jpeg"></a>
-            <div class="hdivider"></div>
-            <a class="appLink" href="https://itunes.apple.com/us/app/art-with-friends-free/id602873438"><img class="appImage" src="assets/images/awf.jpeg"></a>
-        </div>
+		{% include link_triplet.html %}
     </div>
 
 </body>
