--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@ title: Krys Jurgowski
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="assets/js/fades.js"></script>
    
-</head>
+   </head>
 <body>
+	<!-- <nav>
+		<h1>Krys Jurgowski</h1>
+		<a href="/travel">Travel</a>
+	</nav> -->
     <div class="profileContainer">
         <img class="profilePic" src="assets/images/jurgowski2.jpg">
     </div>
