--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@ title: Krys Jurgowski
 <!DOCTYPE html>
 <html>
 <head lang="en">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no, minimum-scale=1.0, maximum-scale=1.0'">
+
     <title>{{ page.title }}</title>
+
     <link rel="stylesheet" type="text/css" href="assets/css/app.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-	<link rel="stylesheet" href="/assets/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="assets/js/fades.js"></script>
+	<script src="assets/js/animations.js"></script>
    
    </head>
 <body>
